Добавление карточек и их расположение в css

--- a/index.html
+++ b/index.html
@@ -8,11 +8,64 @@
 </head>
 <body>
   <div class="page">
-    <div class="card">
-      <div class="card__body">
-        <h2 class="card__title">One piece</h2>
-        <p class="card__content">zxc</p>
+    <div class="card-conteiner">
+
+      <div class="card">
+        <div class="card__body">
+          <h2 class="card__title">One piece</h2>
+          <p class="card__content">zxc</p>
+        </div>
       </div>
+
+      <div class="card">
+        <div class="card__body">
+          <h2 class="card__title">Крутой учитель Онидзука</h2>
+          <p class="card__content">zxc</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__body">
+          <h2 class="card__title">Берсерк</h2>
+          <p class="card__content">zxc</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__body">
+          <h2 class="card__title">Черный клевер</h2>
+          <p class="card__content">zxc</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__body">
+          <h2 class="card__title">Блич</h2>
+          <p class="card__content">zxc</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__body">
+          <h2 class="card__title">Ванпачмен</h2>
+          <p class="card__content">zxc</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__body">
+          <h2 class="card__title">Магическая битва</h2>
+          <p class="card__content">zxc</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__body">
+          <h2 class="card__title">Стальной алхимик</h2>
+          <p class="card__content">zxc</p>
+        </div>
+      </div>
+
     </div>
   </div>
 </body>
