--- a/index.html
+++ b/index.html
@@ -12,57 +12,81 @@
 
       <div class="card">
         <div class="card__body">
-          <h2 class="card__title">One piece</h2>
-          <p class="card__content">zxc</p>
+          <h2 class="card__title">Ван пис</h2>
+          <div class="card__img">
+            <img src="img/one_piece.jpg" alt="1">
+          </div>
+          <p class="card__content">Бороздящие просторы Гранд-Лайна пираты уже отчаялись найти таинственное сокровище легендарного Короля Пиратов Роджера, сулящие нашедшему их счастливчику роскошную жизнь. Спустя годы для большинства авантюристов мифический клад превратился в красивую легенду, но только не для молодого Монки Д. Луффи, который всей душой мечтает найти тайник Роджера, доказав, что достоин зваться новым Королём Пиратов.</p>
         </div>
       </div>
 
       <div class="card">
         <div class="card__body">
           <h2 class="card__title">Крутой учитель Онидзука</h2>
-          <p class="card__content">zxc</p>
+          <div class="card__img">
+            <img src="img/gto.jpg" alt="2">
+          </div>
+          <p class="card__content">С юных лет Эйкити Онидзука является членом местной банды, и он там зарекомендовал себя как самый сильный боец. Криминальная жизнь и вечные потасовки на улицах стали смыслом существования молодого человека. Недавно Эйкити исполнилось двадцать два года, и он решил поменять жизненные ценности, а потому парень начал искать работу. Выбор был невелик и Онидзука пошёл в академию, чтобы устроиться на должность учителя.</p>
         </div>
       </div>
 
       <div class="card">
         <div class="card__body">
           <h2 class="card__title">Берсерк</h2>
-          <p class="card__content">zxc</p>
+          <div class="card__img">
+            <img src="img/guts.jpg" alt="3">
+          </div>
+          <p class="card__content">Детство Гатса было кошмарным, ведь мальчишка вырос в суровых условиях. Воспитанием паренька занимался безжалостный наёмник, который насиловал женщин и кровожадно убивал врагов. С ранних лет юноша обучался искусству владения мечом, и уже в семь лет он мог противостоять взрослым бойцам. В один злополучный день парень стал жертвой насилия собственным опекуном, а потом ему пришлось убить насильника. Гатс попытался сбежать из лагеря наёмников, но на открытой местности на него напали волки, с которыми подростку пришлось сражаться. Мальчишке удалось выжить, но смерть ходила по пятам храброго воина.</p>
         </div>
       </div>
 
       <div class="card">
         <div class="card__body">
           <h2 class="card__title">Черный клевер</h2>
-          <p class="card__content">zxc</p>
+          <div class="card__img">
+            <img src="img/black_clover.jpg" alt="4">
+          </div>
+          <p class="card__content">Их свела общая судьба. Аста и Юно - двое сирот, мечтающих найти своё место под солнцем и когда-нибудь прославиться как великие маги. Однако общая судьба - не общий дар, и, как это часто бывает, пока один достигает определённых успехов, другой вынужден плестись позади, не проявляя практически никакого таланта. Но друг, как известно, познаётся в беде. Когда Юно, получившему могущественный гримуар четырёхлистного клевера, угрожает опасность, Аста раскрывает весь свой потенциал и получает гримуар, на котором красуется клевер с пятью лепестками, прозванный «Чёрным».</p>
         </div>
       </div>
 
       <div class="card">
         <div class="card__body">
           <h2 class="card__title">Блич</h2>
-          <p class="card__content">zxc</p>
+          <div class="card__img">
+            <img src="img/blish.jpg" alt="5">
+          </div>
+          <p class="card__content">Встреча с потусторонним переворачивает жизнь японского школьника Ичиго Куросаки. Узнав о Сообществе Душ и Пустых, он ввязывается в безумный круговорот событий и сам в итоге становится проводником душ в загробный мир - Шинигами. Движимый желанием защитить дорогих ему людей, Ичиго не сразу осознаёт, какая сила в нём сокрыта…Долгое время «Bleach» считался эталоном сёнена 21 века и конкурировал по популярности разве что с «Наруто», однако Анкорд и прерванная трансляция поставила многоточие в судьбе Блич - столь известного аниме-сериала онлайн. Несмотря на длительный перерыв, поклонники манги всё ещё надеются на продолжение столь полюбившейся за многие годы истории.</p>
         </div>
       </div>
 
       <div class="card">
         <div class="card__body">
           <h2 class="card__title">Ванпачмен</h2>
-          <p class="card__content">zxc</p>
+          <div class="card__img">
+            <img src="img/one_punch_man.jpg" alt="6">
+          </div>
+          <p class="card__content">Каково живётся самому сильному человеку в мире? Не так уж и классно, как может показаться на первый взгляд. Когда ты всего достиг, научившись выносить злодеев буквально с одного удара, жизнь теряет краски, пропадает сам интерес к жизни, ведь не к чему стремиться. С подобным внутренним кризисом сталкивается Сайтама - самый сильный человек на планете.</p>
         </div>
       </div>
 
       <div class="card">
         <div class="card__body">
           <h2 class="card__title">Магическая битва</h2>
-          <p class="card__content">zxc</p>
+          <div class="card__img">
+            <img src="img/magic_battle.jpg" alt="7">
+          </div>
+          <p class="card__content">Ни для кого из граждан не будет секретом, что в мире людей существуют потусторонние силы, которые всячески пытаются стать частью их жизни. Демонические сущности всегда жаждут полакомиться человеческой душой. Демонологам давно известна легенда о великом демоне Рёмэн Сукун, который творил ужасные вещи. Вот только лучшим экзорцистам удалось уничтожить демоническое отродье и запечатать части его тела по всему миру. Никто и не мог подумать, что спустя несколько столетий печать ослабнет. Юдзи Итадори должен был вступить в атлетический кружок, но он выбрал клуб оккультистов.</p>
         </div>
       </div>
 
       <div class="card">
         <div class="card__body">
           <h2 class="card__title">Стальной алхимик</h2>
-          <p class="card__content">zxc</p>
+          <div class="card__img">
+            <img src="img/Alchemist.jpg" alt="8">
+          </div>
+          <p class="card__content">В альтернативном мире, где технология уживается рядом с распространённым таинством алхимии, два брата Эдвард и Альфонс мечтают о возвращении своей погибшей матери. Прибегая к алхимии, дети терпят неудачу и забывают о беззаботной жизни: Эдвард теряет руку и ногу, в то время как Альфонс лишается всего тела - его дух оказывается заключён в доспехах. Это и есть Fullmetal Alchemist.</p>
         </div>
       </div>
 
